readme updates everywhere
