# complete/api/garage.pb.gw.go
@@ -84,15 +84,15 @@ func request_Workshop_PaintCar_0(ctx context.Context, marshaler runtime.Marshale
 		_   = err
 	)
 
-	val, ok = pathParams["car_id"]
+	val, ok = pathParams["car_number"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_number")
 	}
 
-	protoReq.CarId, err = runtime.String(val)
+	protoReq.CarNumber, err = runtime.String(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_number", err)
 	}
 
 	msg, err := client.PaintCar(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -119,15 +119,15 @@ func local_request_Workshop_PaintCar_0(ctx context.Context, marshaler runtime.Ma
 		_   = err
 	)
 
-	val, ok = pathParams["car_id"]
+	val, ok = pathParams["car_number"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_number")
 	}
 
-	protoReq.CarId, err = runtime.String(val)
+	protoReq.CarNumber, err = runtime.String(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_number", err)
 	}
 
 	msg, err := server.PaintCar(ctx, &protoReq)
@@ -146,15 +146,15 @@ func request_Workshop_RetrieveCar_0(ctx context.Context, marshaler runtime.Marsh
 		_   = err
 	)
 
-	val, ok = pathParams["car_id"]
+	val, ok = pathParams["car_number"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_number")
 	}
 
-	protoReq.CarId, err = runtime.String(val)
+	protoReq.CarNumber, err = runtime.String(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_number", err)
 	}
 
 	msg, err := client.RetrieveCar(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -173,15 +173,15 @@ func local_request_Workshop_RetrieveCar_0(ctx context.Context, marshaler runtime
 		_   = err
 	)
 
-	val, ok = pathParams["car_id"]
+	val, ok = pathParams["car_number"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "car_number")
 	}
 
-	protoReq.CarId, err = runtime.String(val)
+	protoReq.CarNumber, err = runtime.String(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "car_number", err)
 	}
 
 	msg, err := server.RetrieveCar(ctx, &protoReq)
@@ -425,9 +425,9 @@ func RegisterWorkshopHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 var (
 	pattern_Workshop_AcceptCar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "workshop", "cars"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_Workshop_PaintCar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"v1", "workshop", "cars", "car_id", "paint"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_Workshop_PaintCar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"v1", "workshop", "cars", "car_number", "paint"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_Workshop_RetrieveCar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "workshop", "cars", "car_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_Workshop_RetrieveCar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "workshop", "cars", "car_number"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
