# complete/app/controllers/converters.go
@@ -2,15 +2,15 @@ package controllers
 
 import (
 	workshop "github.com/go-masonry/tutorial/complete/api"
-	"github.com/go-masonry/tutorial/complete/app/db"
+	"github.com/go-masonry/tutorial/complete/app/data"
 )
 
-func FromProtoCarToModelCar(car *workshop.Car) *db.CarEntity {
+func FromProtoCarToModelCar(car *workshop.Car) *data.CarEntity {
 	if car == nil {
 		return nil
 	}
-	return &db.CarEntity{
-		CarID:         car.GetId(),
+	return &data.CarEntity{
+		CarID:         car.GetNumber(),
 		Owner:         car.GetOwner(),
 		BodyStyle:     workshop.CarBody_name[int32(car.GetBodyStyle())],
 		OriginalColor: car.GetColor(),
@@ -18,12 +18,12 @@ func FromProtoCarToModelCar(car *workshop.Car) *db.CarEntity {
 	}
 }
 
-func FromModelCarToProtoCar(car *db.CarEntity) *workshop.Car {
+func FromModelCarToProtoCar(car *data.CarEntity) *workshop.Car {
 	if car == nil {
 		return nil
 	}
 	return &workshop.Car{
-		Id:        car.CarID,
+		Number:    car.CarID,
 		Owner:     car.Owner,
 		BodyStyle: workshop.CarBody(workshop.CarBody_value[car.BodyStyle]),
 		Color:     car.CurrentColor,
